syntax = "proto3";

package rivet.backend.pkg.cdn.ns_auth_type_set;

import "proto/common.proto";
import "proto/backend/cdn.proto";

message Request {
    rivet.common.Uuid namespace_id = 1;
    rivet.backend.cdn.NamespaceConfig.AuthType auth_type = 2;
}

message Response {

}
